kubernetes/projects/applications/apps/portfolio/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: portfolio
    field.cattle.io/projectId: p-applications
    kubernetes.io/metadata.name: portfolio
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-applications
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: portfolio
    meta.helm.sh/release-namespace: portfolio
