kubernetes/projects/applications/apps/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: portfolio
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portfolio
      app.kubernetes.io/component: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        home-lab.io/faro-secret-revision: "2026-07-01-browser-key-data"
      labels:
        app.kubernetes.io/name: portfolio
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: portfolio
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: harbor-registry
      nodeSelector:
        kubernetes.io/arch: arm64
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: portfolio
                    app.kubernetes.io/component: web
                topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: portfolio
              app.kubernetes.io/component: web
      containers:
        - name: web
          # renovate: datasource=github-releases depName=abhi1693/portfolio
          image: registry.home/ghcr.io/abhi1693/portfolio:0.1.9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 111Mi
            limits:
              memory: 192Mi
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
